@@ -28,11 +28,10 @@ ProDy = [
 		{"tag": "section", "text": "2d. Gaussian Network Model (GNM) analysis", "openItem": "True", "children": [
 			{"tag": "protocol", "value": "ProDyGNM", "text": "GNM Mode Analysis"},
 			{"tag": "protocol", "value": "ProDyDomainDecomp", "text": "Domain Decomposition"}
+		]},
+		{"tag": "section", "text": "2e. Hybrid simulations", "openItem": "True", "children": [
+			{"tag": "protocol", "value": "ProDyClustENM", "text": "ClustENM(D) hybrid simulation"}
 		]}
-		#,
-		#{"tag": "section", "text": "2e. Hybrid simulations", "openItem": "True", "children": [
-		#	{"tag": "protocol", "value": "ProDyClustENM", "text": "ClustENM(D) hybrid simulation"}
-		#]}	
 	]},
 	{"tag": "section", "text": "3. Dynamics analysis", "openItem": "True", "children": [
 		{"tag": "protocol", "value": "ProDyEdit", "text": "Edit Modes"},
