@@ -1,5 +1,5 @@
 from .test_core import *
 from .test_pca import *
 from .test_gnm import *
-#from .test_clustenm import *
+from .test_clustenm import *
 from .test_membrane import *
